--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "cookie-sessions": "^0.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
