--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pet-finder-api": "^1.0.1"
   }
 }
