--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cookie-session": "^1.4.0",
     "cookie-sessions": "^0.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.15",
