--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "cookie-sessions": "^0.0.2",
